# ipp_dyntrack

./: Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  requirement.txt  run_docker.sh
src/: README.md
src/asv_control/: package.xml  setup.cfg  setup.py
src/asv_control/asv_control/: los_pid.py  utils.py
src/dyntrack_planner/: package.xml  setup.cfg  setup.py
src/dyntrack_planner/config/: def_config.rviz
src/dyntrack_planner/dyntrack_planner/: baseline_planner.py  grid_map.py  informative_planner.py  logger.py  params.py  perception.py  utils.py
src/dyntrack_planner/launch/: baseline_log.launch.py  dyn_map.launch.py  informative_planner_log.launch.py  vis_rviz.launch.py
src/dyntrack_planner/logs/trial_run/: trial_run_avgdet_data.csv  trial_run_entropy_data.csv  trial_run_og_mse_data.csv  trial_run_pos_mse_data.csv
src/obj_pos_publisher/: CMakeLists.txt  package.xml
src/obj_pos_publisher/src/: object_pos_node.cpp
src/spatiotemporal_pred_nn/src/: data_generator.py  test.py  train.py  unet.py  viz.py
src/vrx_gz/src/: USVWind.cc
src/vrx_gz/worlds/: exp1.sdf  sim_exp_scenario_1.sdf  sim_exp_scenario_2.sdf  sim_exp_scenario_3.sdf  sim_exp_scenario_4.sdf  sim_exp_scenario_4r.sdf  sim_exp_scenario_5.sdf  sim_exp_test_mapping.sdf  sydney_regatta_trial.sdf  test_0.sdf  test_1.sdf  test_perc.sdf  test_rand.sdf  test_rand_1.sdf  test_rand_10.sdf  test_rand_2.sdf  test_rand_3.sdf  test_rand_4.sdf  test_rand_5.sdf  test_rand_6.sdf  test_rand_7.sdf  test_rand_8.sdf  test_rand_9.sdf  test_rand_out.sdf
src/vrx_urdf/vrx_gazebo/launch/: rviz.launch.py
(+7 files in other folders)
